--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1471,6 +1471,10 @@
 }
 
 @media (min-width: 480px) and (max-width: 767px) {
+	#page-title.page-title-dark span
+{
+	color:yellow;
+}
 
 	.container,
 	#header.full-header .container,
@@ -1611,6 +1615,10 @@
 }
 
 @media (max-width: 479px) {
+	#page-title.page-title-dark span
+{
+	color:yellow;
+}
 
 	.container,
 	#header.full-header .container,
